Add docs home link

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -1,6 +1,12 @@
 {% extends "!layout.html" %}
-{%- block extrahead %}
+{%- block sidebartitle %}
+  <div class="sidebartitle-docs-home">
+    <a href="https://docs.trossenrobotics.com/" target="_blank" class="icon icon-home">
+      &nbsp;Trossen Robotics Docs Home
+    </a>
+    <div class="sidebartitle-docs-home-hr">
+      <hr>
+    </div>
+  </div>
   {{ super() }}
-  <!-- Google Tag Manager (noscript) TODO -->
-  <!-- End Google Tag Manager (noscript) -->
 {% endblock %}
