--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </div>
   </div>
   
-            <a href="#" class="icon icon-home"> AgileX HUNTER SE Documentation
+            <a href="#">
+            <img src="_static/logo_hunter_se.png" class="logo" alt="Logo"/>
           </a>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
